k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learn-jenkins-app
  namespace: default
spec:
  rules:
  - host: learn.k3.l
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: learn-jenkins-app  
            port:
              number: 80
